--- a/src/web/index.html
+++ b/src/web/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Electron App</title>
+    <title>AiTerm</title>
   </head>
   <body>
     <div id="root"></div>
